fix(ui): ban (and some other icons) vertically aligned (#231)

--- a/app/assets/stylesheets/src/shared/_scaffolds.scss
+++ b/app/assets/stylesheets/src/shared/_scaffolds.scss
@@ -210,6 +210,7 @@ picture {
 
 .icon {
   stroke-width: 1.25;
+  vertical-align: sub;
 }
 
 .avatar-64px {
